index - base // done

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 
   <section class="material">
     <div class="actions">
-      <button type="button" id="run">Lancer le script</button>
+      <button type="button" id="run">Gagner un point</button>
+      <button type="button" id="multiplier">Multiplier vos points</button>
     </div>
+
+    <p id="numberClicks">0</p>
+    <p id="multiplierInfo"> Multiplication de vos points par : 1 </p>
+
+
   </section>
   <script src="./script.js"></script>
 </body>
