--- a/index.html
+++ b/index.html
@@ -11,20 +11,50 @@
 
 <body>
   <!-- Website content -->
-  <h1>Cookie-cliker</h1>
-  <h2>Temporary page before using css and making it awesome</h2>
+  <div class="container"> 
+    <div class="row"> 
+      <!-- Partie qui reprend le cookie et les boutons -->
+      <div class="col-8 bg-light p-5">
+      <h1>Always more cookies</h1>
+      <h2>Temporary page before using css and making it awesome</h2>
 
-  <section class="material">
-    <div class="actions">
-      <button type="button" id="run">Gagner un point</button>
-      <button type="button" id="multiplier">Multiplier vos points</button>
+      <section class="material">
+        <div class="actions">
+          <button type="button" id="run">Gagner un point</button>
+          <button type="button" id="multiplier">Multiplier vos points</button>
+        </div>
+
+        <p id="numberClicks">0</p>
+        <p id="multiplierInfo"> Multiplication de vos points par : 1 </p>
+        </section>
+      </div>
+      <!-- Partie qui reprend les informations et les bonus  -->
+      <div class="col-4 bg-dark text-white p-5">
+        <div class="row">
+          <h2>Store</h2>
+        </div>
+        <div class="row">
+          <h3>Multiplier</h3>
+        </div>
+        <div class="row">
+          <div class="col-3"></div>
+          <div class="col-3 bg-warning"></div>
+          <div class="col-3"></div>
+          <div class="col-3 bg-warning"></div>
+
+          <div class="row">
+          <h3>Multiplier</h3>
+        </div>
+        <div class="row">
+          <div class="col-3 bg-warning">x5</div>
+          <div class="col-3">x10</div>
+          <div class="col-3 bg-warning">x20</div>
+          <div class="col-3">x100</div>
+        </div>
+      </div>
     </div>
-
-    <p id="numberClicks">0</p>
-    <p id="multiplierInfo"> Multiplication de vos points par : 1 </p>
-
-
-  </section>
+  </div>
+  
   <script src="./script.js"></script>
 </body>
 </html>
