--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
   <!-- Website content -->
-  <div class="container"> 
+
     <div class="row"> 
       <!-- Partie qui reprend le cookie et les boutons -->
       <div class="col-8 bg-light p-5">
       <h1>Always more cookies</h1>
-      <h2>Try to get them all !</h2>
+      <h2>Temporary page before using css and making it awesome</h2>
       <h5><span id="cookie-counter"></span> cookies</h5>
       <section class="material">
         <div class="actions">
@@ -31,12 +31,10 @@
       <!-- Partie qui reprend les informations et les bonus  -->
       <div class="col-4 bg-dark text-white p-5">
         <div class="row">
-          <h2>Score</h2>
-          <p>You've got : <tag id="score"> 0 </tag> point(s). </p>
+          <h2>Store</h2>
         </div>
         <div class="row">
-          <h3>Store</h3>
-
+          <h3>Multiplier</h3>
         </div>
         <div class="row">
           <div class="col-3"></div>
@@ -55,7 +53,7 @@
         </div>
       </div>
     </div>
-  </div>
+
   
   <script src="/scripts/main.js"></script>
 </body>
