--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h5><span id="cookie-counter"></span> cookies</h5>
       <section class="material">
         <div class="actions">
-          <button type="button" id="cookie-click"></button>
+          <button type="button" id="cookie-btn"></button>
           <button type="button" id="multiplier">Multiplier vos points</button>
         </div>
 
