--- a/index.html
+++ b/index.html
@@ -11,49 +11,55 @@
 
 <body>
   <!-- Website content -->
-
     <div class="row"> 
+      <!-- <div class="col-7 col-sm-8 bg-main p-2 text-center"><h2>Game</h2></div>
+      <div class="col-5 col-sm-4 bg-second p-2 text-center text-white"><h2>Store</h2></div> -->
       <!-- Partie qui reprend le cookie et les boutons -->
-      <div class="col-8 bg-light p-5">
+      <div class="col-7 col-sm-8 bg-main p-2 text-center">
       <h1>Always more cookies</h1>
-      <h2>Temporary page before using css and making it awesome</h2>
-      <h5><span id="cookie-counter"></span> cookies</h5>
+      <h2>Try to get them all !</h2>
+      <h5>You've got <span id="cookie-counter" class="text-warning">0</span> cookies</h5>
+      <p>That's approximetly <b id="cookie-second">0</b> per second.<br>Try faster, be faster !</p>
       <section class="material">
         <div class="actions">
-          <button type="button" id="cookie-btn"></button>
+          <button type="button" id="cookie-click"></button><br>
           <button type="button" id="multiplier">Multiplier vos points</button>
         </div>
 
-        <p id="numberClicks">0</p>
         <p id="multiplierInfo"> Multiplication de vos points par : 1 </p>
         </section>
       </div>
-      <!-- Partie qui reprend les informations et les bonus  -->
-      <div class="col-4 bg-dark text-white p-5">
-        <div class="row">
-          <h2>Store</h2>
-        </div>
-        <div class="row">
-          <h3>Multiplier</h3>
-        </div>
-        <div class="row">
-          <div class="col-3"></div>
-          <div class="col-3 bg-warning"></div>
-          <div class="col-3"></div>
-          <div class="col-3 bg-warning"></div>
 
-          <div class="row">
-          <h3>Multiplier</h3>
+      
+      <!-- Partie qui reprend les informations et les bonus  -->
+      <div class="col-5 col-sm-4 bg-second text-white text-center p-2">
+        <div class="row text-center">
+          <h2>Store</h2>
+          <!-- <p>You've got : <tag id="score"> 0 </tag> point(s). </p> -->
+          <p>Use your cookies to get more.</p>
         </div>
-        <div class="row">
-          <div class="col-3 bg-warning">x5</div>
-          <div class="col-3">x10</div>
-          <div class="col-3 bg-warning">x20</div>
-          <div class="col-3">x100</div>
+
+        <div class="row bg-sub-second mb-3">
+          <h5>Multiplier</h5>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x2">x2</button></div>
+          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x10">x10</button></div>
+          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x50">x50</button></div>
+          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x100">x100</button></div>
+        </div>
+
+        <div class="row bg-sub-second my-3">
+          <h5>Auto-clickers</h5>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-4 col-md-3"><button class="allSpace" ype="button" id="auto-clicker-1">1</button></div>
+          <div class="col-4 col-md-3"><button class="allSpace" type="button" id="auto-clicker-2">2</button></div>
+          <div class="col-4 col-md-3"><button class="allSpace" type="button" id="auto-clicker-3">3</button></div>
+          <div class="col-4 col-md-3"><button class="allSpace" type="button" id="auto-clicker-4">4</button></div>
         </div>
       </div>
     </div>
-
   
   <script src="/scripts/logic.js"></script>
 </body>
