Correction multi and auto-clicker button class

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <h1>Always more cookies</h1>
       <h2>Try to get them all !</h2>
       <h5>You've got <span id="cookie-counter" class="text-warning">0</span> cookies</h5>
-      <p>That's approximetly <b id="cookie-second">0</b> per second.<br>Try faster, be faster !</p>
+      <p>That's approximetly <b id="cps">0</b> per second.<br>Try faster, be faster !</p>
       <section class="material">
         <div class="actions">
-          <button type="button" id="cookie-click"></button><br>
+          <button type="button" id="cookie-btn"></button><br>
           <button type="button" id="multiplier">Multiplier vos points</button>
         </div>
 
@@ -43,24 +43,24 @@
           <h5>Multiplier</h5>
         </div>
         <div class="row justify-content-around">
-          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x2">x2</button></div>
-          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x10">x10</button></div>
-          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x50">x50</button></div>
-          <div class="col-6 col-md-3"><button class="allSpace" type="button" id="multiplier-x100">x100</button></div>
+          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x2">x2</button></div>
+          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x10">x10</button></div>
+          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x50">x50</button></div>
+          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x100">x100</button></div>
         </div>
 
         <div class="row bg-sub-second my-3">
           <h5>Auto-clickers</h5>
         </div>
         <div class="row justify-content-around">
-          <div class="col-4 col-md-3"><button class="allSpace" ype="button" id="auto-clicker-1">1</button></div>
-          <div class="col-4 col-md-3"><button class="allSpace" type="button" id="auto-clicker-2">2</button></div>
-          <div class="col-4 col-md-3"><button class="allSpace" type="button" id="auto-clicker-3">3</button></div>
-          <div class="col-4 col-md-3"><button class="allSpace" type="button" id="auto-clicker-4">4</button></div>
+          <div class="col-4 col-md-3"><button class="w-100" type="button" id="auto-clicker-1">1</button></div>
+          <div class="col-4 col-md-3"><button class="w-100" type="button" id="auto-clicker-2">2</button></div>
+          <div class="col-4 col-md-3"><button class="w-100" type="button" id="auto-clicker-3">3</button></div>
+          <div class="col-4 col-md-3"><button class="w-100" type="button" id="auto-clicker-4">4</button></div>
         </div>
       </div>
     </div>
   
-  <script src="/scripts/logic.js"></script>
+  <script src="/scripts/main.js"></script>
 </body>
 </html>
