--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
       </div>
     </div>
   
-  <script src="/scripts/main.js"></script>
+  <script src="scripts/logic.js"></script>
 </body>
 </html>
