Essai hover info

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
           <p>Use your cookies to get more.</p>
         </div>
 
-        <div class="row bg-sub-second mb-3 p-1">
+        <div class="row bg-sub-second mb-3 p-1 ">
           <h5>Multiplier</h5>
         </div>
-        <div class="row justify-content-around">
-          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x2">x2</button></div>
-          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x10">x10</button></div>
-          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x50">x50</button></div>
-          <div class="col-6 col-md-3"><button class="w-100" type="button" id="multiplier-x100">x100</button></div>
+        <div class="row justify-content-around align-items-center">
+          <div class="col-6 col-md-3 hover"><button class="w-100 x2" type="button" id="multiplier-x2"></button></div>
+            <div class="col-10 col-md-9 hide"><p>It will cost you <b id="cost-multiplier">25</b> credits to use this multiplier.</p></div>
+          <div class="col-6 col-md-3"><button class="w-100 x10" type="button" id="multiplier-x10"></button></div>
+          <div class="col-6 col-md-3"><button class="w-100 x50" type="button" id="multiplier-x50"></button></div>
+          <div class="col-6 col-md-3"><button class="w-100 x100" type="button" id="multiplier-x100"></button></div>
         </div>
 
         <div class="row bg-sub-second my-3 p-1">
