--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
           <!-- FIRST MULTIPLIER -->
           <div class="row justify-content-center align-items-center">
-            <div class="col-2"><img src="images/badgeBoulder.png"></div>
+            <div class="col-2"><img src="images/badgeBoulder.png" id="multiplier-1"></div>
             <div class="col-8">
               <p><span class="store-title">Boulder | 50 cookies </span><br>
               <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
@@ -55,7 +55,7 @@
 
           <!-- SECOND MULTIPLIER -->
           <div class="row justify-content-center align-items-center">
-            <div class="col-2"><img src="images/badgeCascade.png"></div>
+            <div class="col-2"><img src="images/badgeCascade.png" id="multiplier-2"></div>
             <div class="col-8">
               <p><span class="store-title">Cascade | 150 cookies</span><br>
               <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
@@ -65,7 +65,7 @@
 
           <!-- THIRD MULTIPLIER -->
           <div class="row justify-content-center align-items-center">
-            <div class="col-2"><img src="images/badgeVolcano.png"></div>
+            <div class="col-2"><img src="images/badgeVolcano.png" id="multiplier-3"></div>
             <div class="col-8">
               <p><span class="store-title">Volcano | 500 cookies</span><br>
               <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
@@ -75,7 +75,7 @@
 
           <!-- FOURTH MULTIPLIER -->
           <div class="row justify-content-center align-items-center no-credit">
-            <div class="col-2 text-center"><img src="images/badgeEarth.png"></div>
+            <div class="col-2"><img src="images/badgeEarth.png" id="multiplier-4"></div>
             <div class="col-8">
               <p><span class="store-title">Earth | 1250 cookies</span><br>
               <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
@@ -92,9 +92,9 @@
         <p class="fw-lighter text-uppercase pt-2">A u to - c l i c k e r s</p>
        </div> 
 
-        <!-- FIRST MULTIPLIER -->
+        <!-- FIRST -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMagikarp.gif"></div>
+          <div class="col-2"><img src="images/autoMagikarp.gif" id="auto-clicker-1"></div>
           <div class="col-8">
             <p><span class="store-title">Magikarp | 50 cookies</span><br>
             <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
@@ -102,9 +102,9 @@
           <div class="col-1">0</div>
         </div>
 
-        <!-- SECOND MULTIPLIER -->
+        <!-- SECOND -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoSnorlax.gif"></div>
+          <div class="col-2"><img src="images/autoSnorlax.gif" id="auto-clicker-2"></div>
           <div class="col-8">
             <p><span class="store-title">Snorlax | 150 cookies</span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
@@ -112,9 +112,9 @@
           <div class="col-1">0</div>
         </div>
 
-        <!-- THIRD MULTIPLIER -->
+        <!-- THIRD -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoPikachu.gif"></div>
+          <div class="col-2"><img src="images/autoPikachu.gif" id="auto-clicker-3"></div>
           <div class="col-8">
             <p><span class="store-title">Pikachu | 500 cookies</span> <br>
             <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
@@ -122,9 +122,9 @@
           <div class="col-1">0</div>
         </div>
 
-        <!-- FOURTH MULTIPLIER -->
+        <!-- FOURTH -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMewtwo.gif"></div>
+          <div class="col-2"><img src="images/autoMewtwo.gif" id="auto-clicker-4"></div>
           <div class="col-8">
             <p><span class="store-title">Mewtwo | 1250 cookies</span> <br>
             <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
