--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Partie qui reprend le nombre de cookies -->
         <div class="row justify-content-center mt-3">
           <div class="col-8 rounded-3 info-cookies">
-            <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>Pokémon(s) in the bank.</p>
+            <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>&#x20BD;okédollar in the bank.</p>
           </div>
           <div class="col-8 mt-2">
             <p class="lh-sm text-normal">Try to get them all !
@@ -52,16 +52,16 @@
           <div class="col"><small>+ 100%</small></div>
         </div>
         <div class="row">
-          <div class="col"><img src="images/badgeBoulder.png" id="multiplier-1"></div>
-          <div class="col"><img src="images/badgeCascade.png" id="multiplier-2"></div>
-          <div class="col"><img src="images/badgeVolcano.png" id="multiplier-3"></div>
-          <div class="col"><img src="images/badgeEarth.png" id="multiplier-4"></div>
+          <div class="col"><img src="images/badgeBoulder.png" id="booster-1"></div>
+          <div class="col"><img src="images/badgeCascade.png" id="booster-2"></div>
+          <div class="col"><img src="images/badgeVolcano.png" id="booster-3"></div>
+          <div class="col"><img src="images/badgeEarth.png" id="booster-4"></div>
         </div>
         <div class="row">
-          <div class="col"><small>50<br>credits</small></div>
-          <div class="col"><small>250<br>credits</small></div>
-          <div class="col"><small>1500<br>credits</small></div>
-          <div class="col"><small>7500<br>credits</small></div>
+          <div class="col"><small>&#x20BD;50<br>credits</small></div>
+          <div class="col"><small>&#x20BD;250<br>credits</small></div>
+          <div class="col"><small>&#x20BD;1500<br>credits</small></div>
+          <div class="col"><small>&#x20BD;7500<br>credits</small></div>
         </div>
 
         <div class="row justify-content-center bg-second my-2 rounded-3">
@@ -73,8 +73,8 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-2"><img src="images/superball.png" id="multiplier-1" class="small-img"></div>
             <div class="col-7">
-              <p><span class="store-title">Superball | 50 pokeballs</span><br>
-              <span class="fw-light"><small>Get 2 pokeballs for every click.</small></span></p>
+              <p><span class="store-title">Superball | &#x20BD;50</span><br>
+              <span class="fw-light"><small>Get &#x20BD;2 for every click.</small></span></p>
             </div>
             <div class="col-2">0</div>
           </div>
@@ -83,8 +83,8 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-2"><img src="images/ultraball.png" id="multiplier-2" class="small-img"></div>
             <div class="col-7">
-              <p><span class="store-title">Ultraball | 200 pokeballs</span><br>
-              <span class="fw-light"><small>Get 10 pokeballs for every click.</small></span></p>
+              <p><span class="store-title">Ultraball | &#x20BD;200</span><br>
+              <span class="fw-light"><small>Get &#x20BD;10 for every click.</small></span></p>
             </div>
             <div class="col-2">0</div>
           </div>
@@ -93,8 +93,8 @@
           <div class="row justify-content-center align-items-center">
             <div class="col-2"><img src="images/masterball.png" id="multiplier-3" class="small-img"></div>
             <div class="col-7">
-              <p><span class="store-title">Masterball | 1000 pokeballs</span><br>
-              <span class="fw-light"><small>Get 50 pokeballs for every click.</small></span></p>
+              <p><span class="store-title">Masterball | &#x20BD;1000</span><br>
+              <span class="fw-light"><small>Get &#x20BD;50 for every click.</small></span></p>
             </div>
             <div class="col-2">0</div>
           </div>
@@ -103,8 +103,8 @@
           <div class="row justify-content-center align-items-center no-credit">
             <div class="col-2"><img src="images/goldball.png" id="multiplier-4" class="small-img"></div>
             <div class="col-7">
-              <p><span class="store-title">Goldball | 4000 pokeballs</span><br>
-              <span class="fw-light"><small>Get 250 pokeballs for every click.</small></span></p>
+              <p><span class="store-title">Goldball | &#x20BD;4000</span><br>
+              <span class="fw-light"><small>Get &#x20BD;250 for every click.</small></span></p>
             </div>
             <div class="col-2">0</div>
           </div>        
@@ -115,14 +115,14 @@
       
       <!-- DEBUT AUTO-CLICKERS -->
       <div class="row bg-second my-1 rounded-3">
-        <p class="fw-lighter text-uppercase pt-2 ">A u to - c l i c k e r s</p>
+        <p class="fw-lighter text-uppercase pt-2 ">A u t o - c l i c k e r s</p>
        </div> 
 
         <!-- FIRST -->
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoMagikarp.gif" id="auto-clicker-1"></div>
           <div class="col-7">
-            <p><span class="store-title">Magikarp | 50 cookies</span><br>
+            <p><span class="store-title">Magikarp | &#x20BD;50</span><br>
             <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
@@ -132,7 +132,7 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoSnorlax.gif" id="auto-clicker-2"></div>
           <div class="col-7">
-            <p><span class="store-title">Snorlax | 150 cookies</span><br>
+            <p><span class="store-title">Snorlax | &#x20BD;150</span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
@@ -142,7 +142,7 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoPikachu.gif" id="auto-clicker-3"></div>
           <div class="col-7">
-            <p><span class="store-title">Pikachu | 500 cookies</span> <br>
+            <p><span class="store-title">Pikachu | &#x20BD;500</span> <br>
             <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
@@ -152,7 +152,7 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoMewtwo.gif" id="auto-clicker-4"></div>
           <div class="col-7">
-            <p><span class="store-title">Mewtwo | 1250 cookies</span> <br>
+            <p><span class="store-title">Mewtwo | &#x20BD;1250</span> <br>
             <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
