Added booster button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
           </div>
 
           <div class="col-8">
-              <button type="button" id="cookie-btn"></button><br>
+            <div id="pokebadge">
+              <button type="button" id="cookie-btn"></button>
+              <button id="badge-btn"></button>
+            </div>
+              <br>
               <p>Your points are multiplied by : <b class="text-danger" id="multiplierInfo">1 </b></p>
         </div>
         
