--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <!-- FIRST -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMagikarp.gif" id="auto-clicker-1"></div>
+          <div class="col-2"><img src="images/autoMagikarp.png" id="auto-clicker-1"></div>
           <div class="col-7">
             <p><span class="store-title">Magikarp | &#x20BD;50</span><br>
             <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
@@ -88,7 +88,7 @@
 
         <!-- SECOND -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoSnorlax.gif" id="auto-clicker-2"></div>
+          <div class="col-2"><img src="images/autoSnorlax.png" id="auto-clicker-2"></div>
           <div class="col-7">
             <p><span class="store-title">Snorlax | &#x20BD;150</span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
@@ -98,7 +98,7 @@
 
         <!-- THIRD -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoPikachu.gif" id="auto-clicker-3"></div>
+          <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3"></div>
           <div class="col-7">
             <p><span class="store-title">Pikachu | &#x20BD;500</span> <br>
             <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
@@ -108,7 +108,7 @@
 
         <!-- FOURTH -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMewtwo.gif" id="auto-clicker-4"></div>
+          <div class="col-2"><img src="images/autoMewtwo.png" id="auto-clicker-4"></div>
           <div class="col-7">
             <p><span class="store-title">Mewtwo | &#x20BD;1250</span> <br>
             <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
