--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
           <div class="col"><small>+ 100%</small></div>
         </div>
         <div class="row">
-          <div class="col img-button"><img src="images/superball.png" id="multiplier-1" class="small-img img-button"></div>
-          <div class="col img-button"><img src="images/ultraball.png" id="multiplier-2" class="small-img img-button"></div>
-          <div class="col img-button"><img src="images/masterball.png" id="multiplier-3" class="small-img img-button"></div>
-          <div class="col img-button"><img src="images/goldball.png" id="multiplier-4" class="small-img img-button"></div>
+          <div class="col"><img src="images/superball.png" id="multiplier-1" class="small-img img-button"></div>
+          <div class="col"><img src="images/ultraball.png" id="multiplier-2" class="small-img img-button"></div>
+          <div class="col"><img src="images/masterball.png" id="multiplier-3" class="small-img img-button"></div>
+          <div class="col"><img src="images/goldball.png" id="multiplier-4" class="small-img img-button"></div>
         </div>
         <div class="row">
           <div class="col"><small>&#x20BD;50<br>Superball</small></div>
