--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Partie qui reprend le nombre de cookies -->
         <div class="row justify-content-center mt-3">
           <div class="col-8 rounded-3 info-cookies">
-            <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>&#x20BD;okédollar in the bank.</p>
+            <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>Pokédollar in the bank.</p>
           </div>
           <div class="col-8 mt-2">
             <p class="lh-sm text-normal">Try to get them all !
@@ -50,10 +50,10 @@
         </div>
 
         <div class="row">
-          <div class="col"><small>+10%</small></div>
-          <div class="col"><small>+ 25 %</small></div>
-          <div class="col"><small>+ 50%</small></div>
-          <div class="col"><small>+ 100%</small></div>
+          <div class="col superball"><small>+10%</small></div>
+          <div class="col superball"><small>+ 25 %</small></div>
+          <div class="col superball"><small>+ 50%</small></div>
+          <div class="col superball"><small>+ 100%</small></div>
         </div>
         <div class="row">
           <div class="col"><img src="images/superball.png" id="multiplier-1" class="small-img"></div>
@@ -62,10 +62,10 @@
           <div class="col"><img src="images/goldball.png" id="multiplier-4" class="small-img"></div>
         </div>
         <div class="row">
-          <div class="col"><small>&#x20BD;50<br>Superball</small></div>
-          <div class="col"><small>&#x20BD;250<br>Ultraball</small></div>
-          <div class="col"><small>&#x20BD;1500<br>Masterball</small></div>
-          <div class="col"><small>&#x20BD;7500<br>Goldball</small></div>
+          <div class="col superball"><small>$50<br>Superball</small></div>
+          <div class="col superball"><small>$250<br>Ultraball</small></div>
+          <div class="col superball"><small>$1500<br>Masterball</small></div>
+          <div class="col superball"><small>$7500<br>Goldball</small></div>
         </div>
 
         
@@ -80,7 +80,7 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoMagikarp.gif" id="auto-clicker-1"></div>
           <div class="col-7">
-            <p><span class="store-title">Magikarp | &#x20BD;50</span><br>
+            <p><span class="store-title">Magikarp | $50</span><br>
             <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
@@ -90,7 +90,7 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoSnorlax.gif" id="auto-clicker-2"></div>
           <div class="col-7">
-            <p><span class="store-title">Snorlax | &#x20BD;150</span><br>
+            <p><span class="store-title">Snorlax | $150</span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
@@ -100,7 +100,7 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoPikachu.gif" id="auto-clicker-3"></div>
           <div class="col-7">
-            <p><span class="store-title">Pikachu | &#x20BD;500</span> <br>
+            <p><span class="store-title">Pikachu | $500</span> <br>
             <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
@@ -110,7 +110,7 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoMewtwo.gif" id="auto-clicker-4"></div>
           <div class="col-7">
-            <p><span class="store-title">Mewtwo | &#x20BD;1250</span> <br>
+            <p><span class="store-title">Mewtwo | $1250</span> <br>
             <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
           </div>
           <div class="col-2">0</div>
