--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </div>
 
         <div class="row">
-          <div class="col"><small>+10%</small></div>
-          <div class="col"><small>+ 25 %</small></div>
-          <div class="col"><small>+ 50%</small></div>
-          <div class="col"><small>+ 100%</small></div>
+          <div class="col"><small>+1</small></div>
+          <div class="col"><small>+2</small></div>
+          <div class="col"><small>+5</small></div>
+          <div class="col"><small>+10</small></div>
         </div>
         <div class="row">
           <div class="col"><img src="images/superball.png" id="multiplier-1" class="small-img"></div>
