Updated multipliers ID

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
           <div class="col superball"><small>+10</small></div>
         </div>
         <div class="row">
-          <div class="col"><img src="images/superball.png" id="multiplier-1" class="small-img"></div>
-          <div class="col"><img src="images/ultraball.png" id="multiplier-2" class="small-img"></div>
-          <div class="col"><img src="images/masterball.png" id="multiplier-3" class="small-img"></div>
-          <div class="col"><img src="images/goldball.png" id="multiplier-4" class="small-img"></div>
+          <div class="col"><img src="images/superball.png" id="m-1-p" class="small-img"></div>
+          <div class="col"><img src="images/ultraball.png" id="m-2-p" class="small-img"></div>
+          <div class="col"><img src="images/masterball.png" id="m-3-p" class="small-img"></div>
+          <div class="col"><img src="images/goldball.png" id="m-4-p" class="small-img"></div>
         </div>
         <div class="row">
           <div class="col superball"><small>$50<br>Superball</small></div>
