Added ID on autoclicker elements

--- a/index.html
+++ b/index.html
@@ -81,40 +81,40 @@
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoMagikarp.gif" id="auto-clicker-1"></div>
           <div class="col-7">
-            <p><span class="store-title">Magikarp | $50</span><br>
+            <p><span class="store-title">Magikarp | <span id="ac-1-p">$50</span></span><br>
             <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2">0</div>
+          <div class="col-2 ac-1-c">0</div>
         </div>
 
         <!-- SECOND -->
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoSnorlax.gif" id="auto-clicker-2"></div>
           <div class="col-7">
-            <p><span class="store-title">Snorlax | $150</span><br>
+            <p><span class="store-title">Snorlax | <span id="ac-2-p">$150</span></span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2">0</div>
+          <div class="col-2 ac-2-c">0</div>
         </div>
 
         <!-- THIRD -->
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoPikachu.gif" id="auto-clicker-3"></div>
           <div class="col-7">
-            <p><span class="store-title">Pikachu | $500</span> <br>
+            <p><span class="store-title">Pikachu | <span id="ac-3-p">$500</span></span> <br>
             <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2">0</div>
+          <div class="col-2 ac-3-c">0</div>
         </div>
 
         <!-- FOURTH -->
         <div class="row justify-content-center align-items-center m-0">
           <div class="col-2"><img src="images/autoMewtwo.gif" id="auto-clicker-4"></div>
           <div class="col-7">
-            <p><span class="store-title">Mewtwo | $1250</span> <br>
+            <p><span class="store-title">Mewtwo | <span id="ac-4-p">$1250</span></span> <br>
             <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2">0</div>
+          <div class="col-2 ac-4-c">0</div>
         </div> 
         
       </div> 
