Added opacity on autoclickers

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <!-- SECOND -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoSnorlax.png" id="auto-clicker-2"></div>
+          <div class="col-2 no-credit"><img src="images/autoSnorlax.png" id="auto-clicker-2"></div>
           <div class="col-7">
             <p><span class="store-title">Snorlax | <span id="ac-2-p">$150</span></span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
@@ -100,7 +100,7 @@
         </div>
 
         <!-- THIRD -->
-        <div class="row justify-content-center align-items-center m-0">
+        <div class="row justify-content-center align-items-center m-0 no-credit">
           <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3"></div>
           <div class="col-7">
             <p><span class="store-title">Pikachu | <span id="ac-3-p">$500</span></span> <br>
