Auto-Clickers are moving

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!-- FIRST -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMagikarp.png" id="auto-clicker-1"></div>
+          <div class="col-2"><img src="images/autoMagikarp.png" id="auto-clicker-1" onclick="this.src='images/autoMagikarp.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Magikarp | <span id="ac-1-p">$50</span></span><br>
             <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
@@ -91,7 +91,7 @@
 
         <!-- SECOND -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2 no-credit"><img src="images/autoSnorlax.png" id="auto-clicker-2"></div>
+          <div class="col-2 no-credit"><img src="images/autoSnorlax.png" id="auto-clicker-2" onclick="this.src='images/autoSnorlax.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Snorlax | <span id="ac-2-p">$150</span></span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
@@ -101,7 +101,7 @@
 
         <!-- THIRD -->
         <div class="row justify-content-center align-items-center m-0 no-credit">
-          <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3"></div>
+          <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3" onclick="this.src='images/autoPikachu.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Pikachu | <span id="ac-3-p">$500</span></span> <br>
             <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
@@ -111,7 +111,7 @@
 
         <!-- FOURTH -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMewtwo.png" id="auto-clicker-4"></div>
+          <div class="col-2"><img src="images/autoMewtwo.png" id="auto-clicker-4" onclick="this.src='images/autoMewtwo.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Mewtwo | <span id="ac-4-p">$1250</span></span> <br>
             <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
