--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Website content -->
     <div class="row justify-content-center align-items-center">
-      <div class="col-lg-6">
+      <div class="col-md-10 col-xl-8 col-xxl-6">
       <!-- Partie qui reprend le cookie et les boutons -->
       <div class="col-12 text-center">
 
@@ -43,37 +43,70 @@
           <h2 class="text-uppercase text-wrap titre">S t o r e</h2>
         </div>
 
-        <!-- BOOSTER -->
+        <!-- MULTIPLIER -->
 
         <div class="row justify-content-center bg-second mb-2 rounded-3">
           <p class="fw-lighter text-uppercase pt-2">M u l t i p l i e r s</p>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center">
 
-          <div class="col superball"><small>+1</small></div>
-          <div class="col superball"><small>+2</small></div>
-          <div class="col superball"><small>+5</small></div>
-          <div class="col superball"><small>+10</small></div>
+          <!-- FIRST MULTIPLIER -->
+          <div class="col-6 col-sm-3">
+            <div class="col-12 superball">
+              <small>+1</small>
+            </div>
+            <div class="col-12">
+              <img src="images/superball.png" id="m-1-p" class="small-img img-button">
+            </div>
+            <div class="col-12 superball">
+              <small>$50<br>Superball</small>
+            </div>
+          </div>
+
+          <!-- Second MULTIPLIER-->
+          <div class="col-6 col-sm-3">
+            <div class="col-12 superball">
+              <small>+2</small>
+            </div>
+            <div class="col-12">
+              <img src="images/ultraball.png" id="m-2-p" class="small-img img-button">
+            </div>
+            <div class="col-12 superball">
+              <small>$250<br>Ultraball</small>
+            </div>
+          </div>
+
+          <!-- THIRD MULTIPLIER -->
+          <div class="col-6 col-sm-3">
+            <div class="col-12 superball">
+              <small>+5</small>
+            </div>
+            <div class="col-12">
+              <img src="images/masterball.png" id="m-3-p" class="small-img img-button">
+            </div>
+            <div class="col-12 superball">
+              <small>$1500<br>Masterball</small>
+            </div>
+          </div>
+
+          <!-- FOURTH MULTIPLIER -->
+          <div class="col-6 col-sm-3">
+            <div class="col-12 superball">
+              <small>+10</small>
+            </div>
+            <div class="col-12">
+              <img src="images/goldball.png" id="m-4-p" class="small-img img-button">
+            </div>
+            <div class="col-12 superball">
+              <small>$7500<br>Goldball</small>
+            </div>
+          </div>
         </div>
-        <div class="row">
 
-          <div class="col"><img src="images/superball.png" id="m-1-p" class="small-img img-button"></div>
-          <div class="col"><img src="images/ultraball.png" id="m-2-p" class="small-img img-button"></div>
-          <div class="col"><img src="images/masterball.png" id="m-3-p" class="small-img img-button"></div>
-          <div class="col"><img src="images/goldball.png" id="m-4-p" class="small-img img-button"></div>
+      <!--  MULTIPLIER ----- ENND !! -->
 
-        </div>
-        <div class="row">
-          <div class="col superball"><small>$50<br>Superball</small></div>
-          <div class="col superball"><small>$250<br>Ultraball</small></div>
-          <div class="col superball"><small>$1500<br>Masterball</small></div>
-          <div class="col superball"><small>$7500<br>Goldball</small></div>
-        </div>
 
-        
-
-      
       <!-- DEBUT AUTO-CLICKERS -->
       <div class="row bg-second my-1 rounded-3">
         <p class="fw-lighter text-uppercase pt-2 ">A u t o - c l i c k e r s</p>
