connected prices and count to text + added id to html tags

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
           <div class="col superball"><small>+10</small></div>
         </div>
         <div class="row">
-          <div class="col"><img src="images/superball.png" id="m-1-p" class="small-img"></div>
-          <div class="col"><img src="images/ultraball.png" id="m-2-p" class="small-img"></div>
-          <div class="col"><img src="images/masterball.png" id="m-3-p" class="small-img"></div>
-          <div class="col"><img src="images/goldball.png" id="m-4-p" class="small-img"></div>
+          <div class="col"><img src="images/superball.png" id="superball"  class="small-img"></div>
+          <div class="col"><img src="images/ultraball.png" id="ultraball" class="small-img"></div>
+          <div class="col"><img src="images/masterball.png"   id="masterball"  class="small-img"></div>
+          <div class="col"><img src="images/goldball.png"  id="goldball" class="small-img"></div>
         </div>
         <div class="row">
-          <div class="col superball"><small>$50<br>Superball</small></div>
-          <div class="col superball"><small>$250<br>Ultraball</small></div>
-          <div class="col superball"><small>$1500<br>Masterball</small></div>
-          <div class="col superball"><small>$7500<br>Goldball</small></div>
+          <div class="col superball"><small id="m-1-p">$50<br>Superball</small></div>
+          <div class="col superball"><small id="m-2-p">$250<br>Ultraball</small></div>
+          <div class="col superball"><small id="m-3-p">$1500<br>Masterball</small></div>
+          <div class="col superball"><small id="m-4-p">$7500<br>Goldball</small></div>
         </div>
 
         
@@ -84,7 +84,7 @@
             <p><span class="store-title">Magikarp | <span id="ac-1-p">$50</span></span><br>
             <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2 ac-1-c">0</div>
+          <div class="col-2 ac-1-c" id="ac-1-c">0</div>
         </div>
 
         <!-- SECOND -->
@@ -94,7 +94,7 @@
             <p><span class="store-title">Snorlax | <span id="ac-2-p">$150</span></span><br>
             <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2 ac-2-c">0</div>
+          <div class="col-2 ac-2-c" id="ac-2-c">0</div>
         </div>
 
         <!-- THIRD -->
@@ -104,7 +104,7 @@
             <p><span class="store-title">Pikachu | <span id="ac-3-p">$500</span></span> <br>
             <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2 ac-3-c">0</div>
+          <div class="col-2 ac-3-c" id="ac-3-c">0</div>
         </div>
 
         <!-- FOURTH -->
@@ -114,7 +114,7 @@
             <p><span class="store-title">Mewtwo | <span id="ac-4-p">$1250</span></span> <br>
             <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
           </div>
-          <div class="col-2 ac-4-c">0</div>
+          <div class="col-2 ac-4-c" id="ac-4-c">0</div>
         </div> 
         
       </div> 
