--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Partie qui reprend le nombre de cookies -->
         <div class="row justify-content-center mt-3">
           <div class="col-8 rounded-3 info-cookies">
-            <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>Pokédollar in the bank.</p>
+            <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>Pokédollar in the bank</p>
           </div>
           <div class="col-8 mt-2">
             <p class="lh-sm text-normal">Try to get them all !
@@ -33,7 +33,7 @@
               <button id="badge-btn"></button>
             </div>
               <br>
-              <p>Your points are multiplied by : <b class="text-danger" id="multiplierInfo">1 </b></p>
+              <p>Your points are multiplied by <b class="text-danger" id="multiplierInfo">1 </b></p>
         </div>
         
         
@@ -117,7 +117,7 @@
           <div class="col-2"><img src="images/autoMagikarp.png" id="auto-clicker-1" onclick="this.src='images/autoMagikarp.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Magikarp | <span id="ac-1-p">$50</span></span><br>
-            <span class="fw-light"><small>Get 200% bonus for 10 secondes.</small></span></p>
+            <span class="fw-light"><small>Get 200% bonus for 10 seconds</small></span></p>
           </div>
           <div class="col-2 ac-1-c" id="ac-1-c">0</div>
         </div>
@@ -127,7 +127,7 @@
           <div class="col-2 no-credit"><img src="images/autoSnorlax.png" id="auto-clicker-2" onclick="this.src='images/autoSnorlax.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Snorlax | <span id="ac-2-p">$150</span></span><br>
-            <span class="fw-light"><small>Get 500% bonus for 10 secondes.</small></span></p>
+            <span class="fw-light"><small>Get 500% bonus for 10 seconds</small></span></p>
           </div>
           <div class="col-2 ac-2-c" id="ac-2-c">0</div>
         </div>
@@ -137,7 +137,7 @@
           <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3" onclick="this.src='images/autoPikachu.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Pikachu | <span id="ac-3-p">$500</span></span> <br>
-            <span class="fw-light"><small>Get 1000% bonus for 10 secondes.</small></span></p>
+            <span class="fw-light"><small>Get 1000% bonus for 10 seconds</small></span></p>
           </div>
           <div class="col-2 ac-3-c" id="ac-3-c">0</div>
         </div>
@@ -147,7 +147,7 @@
           <div class="col-2"><img src="images/autoMewtwo.png" id="auto-clicker-4" onclick="this.src='images/autoMewtwo.gif'"></div>
           <div class="col-7">
             <p><span class="store-title">Mewtwo | <span id="ac-4-p">$1250</span></span> <br>
-            <span class="fw-light"><small>Get 2000% bonus for 10 secondes.</small></span></p>
+            <span class="fw-light"><small>Get 2000% bonus for 10 seconds</small></span></p>
           </div>
           <div class="col-2 ac-4-c" id="ac-4-c">0</div>
         </div> 
