Set booster timer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <button id="badge-btn"></button>
             </div>
               <br>
-              <p>Each click gives you : <b class="text-danger" id="multiplierInfo">1</b> $</p>
+              <p>Each click gives you: $<b class="text-danger" id="multiplierInfo">1</b></p>
         </div>
         
         
