pokeAlert prompt when user tries to purchase multi or auto with insuffcient $

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- MULTIPLIER -->
 
-        <div class="row justify-content-center bg-second mb-2 rounded-3">
+        <div class="row justify-content-center bg-second mb-2 rounded-3" id="multiBanner">
           <p class="fw-lighter text-uppercase pt-2">M u l t i p l i e r s</p>
         </div>
 
@@ -107,7 +107,7 @@
 
 
       <!-- DEBUT AUTO-CLICKERS -->
-      <div class="row bg-second my-1 rounded-3 mt-4 mb-2">
+      <div class="row bg-second my-1 rounded-3 mt-4 mb-2" id="autoBanner">
         <p class="fw-lighter text-uppercase pt-2 ">A u t o - c l i c k e r s</p>
        </div> 
 
