--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <!-- FIRST -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMagikarp.png" id="auto-clicker-1" onclick="this.src='images/autoMagikarp.gif'"></div>
+          <div class="col-2"><img src="images/autoMagikarp.png" id="auto-clicker-1" onclick="if(score > magikarp.price){this.src='images/autoMagikarp.gif'}"></div>
           <div class="col-7">
             <p><span class="store-title">Magikarp | <span id="ac-1-p">$50</span></span><br>
 
@@ -126,7 +126,7 @@
 
         <!-- SECOND -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoSnorlax.png" id="auto-clicker-2" onclick="this.src='images/autoSnorlax.gif'"></div>
+          <div class="col-2"><img src="images/autoSnorlax.png" id="auto-clicker-2" onclick="if(score > snorlax.price){this.src='images/autoSnorlax.gif'}"></div>
           <div class="col-7">
             <p><span class="store-title">Snorlax | <span id="ac-2-p">$150</span></span><br>
             <span class="fw-light"><small>Gives you 4 extra $okédollar per second</small></span></p>
@@ -138,7 +138,7 @@
 
         <!-- THIRD -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3" onclick="this.src='images/autoPikachu.gif'"></div>
+          <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3" onclick="if(score > pikachu.price){this.src='images/autoPikachu.gif'}"></div>
           <div class="col-7">
             <p><span class="store-title">Pikachu | <span id="ac-3-p">$500</span></span> <br>
             <span class="fw-light"><small>Gives you 10 extra $okédollar per second</small></span></p>
@@ -149,7 +149,7 @@
 
         <!-- FOURTH -->
         <div class="row justify-content-center align-items-center m-0">
-          <div class="col-2"><img src="images/autoMewtwo.png" id="auto-clicker-4" onclick="this.src='images/autoMewtwo.gif'"></div>
+          <div class="col-2"><img src="images/autoMewtwo.png" id="auto-clicker-4" onclick="if(score > mewtwo.price){this.src='images/autoMewtwo.gif'}"></div>
           <div class="col-7">
             <p><span class="store-title">Mewtwo | <span id="ac-4-p">$1250</span></span> <br>
             <span class="fw-light"><small>Gives you 15 extra $okédollar per second</small></span></p>
