--- a/index.html
+++ b/index.html
@@ -209,6 +209,6 @@
         </div>
     </div> -->
 
-  <script src="scripts/logic.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
