Remove unnecessary div

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body class="row justify-content-center align-items-center">
   <!-- Website content -->
-  <div class="col-md-10 col-xxl-8">
+  <!-- <div class="col-md-10 col-xxl-8"> -->
     <!-- Partie qui reprend le cookie et les boutons -->
-    <div class="col-12 text-center">
+    <div class="col-12 col-md-10 col-xxl-8 text-center">
 
       <!-- Partie qui reprend le nombre de cookies -->
       <div class="row justify-content-center mt-3">
@@ -167,7 +167,7 @@
           <div class="col-2 ac-4-c" id="ac-4-c">0</div>
         </div>
 
-      </div>
+      <!-- </div> -->
 
 
 
